--- a/popup.html
+++ b/popup.html
@@ -1,3 +1,27 @@
 <!DOCTYPE html>
+<style> 
+input[type=search] {
+    width: 130px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    
+    padding: 12px 40px 12px 20px;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+}
+input[type=search]:hover {
+    width: 80%;
+}
+input[type=search]:focus {
+    width: 60%;
+}
 
+
+input[type=search]:active {
+    width: 100%;
+}
+
+</style>
 <img src="https://tebahpla.github.io/ooglelogo.png.png"></img><form action='https://tebahpla.github.io/oogle' target="_blank" ><input type="search" title="Search The Web" autofocus class='search' placeholder="Search The Web" name="q" autocomplete="on" value required> <input type="submit" value="search"></form>
