--- a/popup.html
+++ b/popup.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <style> 
-input[type=search] {
+input {
     width: 130px;
     box-sizing: border-box;
     border: 2px solid #ccc;
     border-radius: 4px;
     font-size: 16px;
-    
+    background: white;
     padding: 12px 40px 12px 20px;
     -webkit-transition: width 0.4s ease-in-out;
     transition: width 0.4s ease-in-out;
