--- a/popup.html
+++ b/popup.html
@@ -11,6 +11,8 @@ input {
     -webkit-transition: width 0.4s ease-in-out;
     transition: width 0.4s ease-in-out;
 }
+input [type=submit]{
+    background-image: url('searchicon.png');
 input[type=search]:hover {
     width: 80%;
 }
@@ -24,4 +26,4 @@ input[type=search]:active {
 }
 
 </style>
-<img src="https://tebahpla.github.io/ooglelogo.png.png"></img><form action='https://tebahpla.github.io/oogle' target="_blank" ><input type="search" title="Search The Web" autofocus class='search' placeholder="Search The Web" name="q" autocomplete="on" value required> <input type="submit" value="search"></form>
+<img src="https://tebahpla.github.io/ooglelogo.png.png"></img><form action='https://tebahpla.github.io/oogle' target="_blank" ><input type="search" title="Search The Web" autofocus class='search' placeholder="Search The Web" name="q" autocomplete="on" value required> <input type="submit" value=''></form>
