--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,8 @@
+
 <!DOCTYPE html>
 <style> 
 input {
-    width: 130px;
+    
     box-sizing: border-box;
     border: 2px solid #ccc;
     border-radius: 4px;
@@ -11,9 +12,11 @@ input {
     -webkit-transition: width 0.4s ease-in-out;
     transition: width 0.4s ease-in-out;
 }
-
+input[type=search]{
+width: 100px;
+}
 input[type=search]:hover {
-    width: 80%;
+    width: 70%;
 }
 input[type=search]:focus {
     width: 60%;
@@ -25,4 +28,4 @@ input[type=search]:active {
 }
 
 </style>
-<img src="https://tebahpla.github.io/ooglelogo.png.png"></img><form action='https://tebahpla.github.io/oogle' target="_blank" ><input type="search" title="Search The Web" autofocus class='search' placeholder="Search The Web" name="q" autocomplete="on" value required> <input type="submit" value='🔍'></form>
+<img src="https://tebahpla.github.io/ooglelogo.png.png"></img><form action='https://tebahpla.github.io/newoogle' target="_blank" ><input type="search" title="Search The Web" autofocus class='search' placeholder="Search The Web" name="q" autocomplete="on" value required> <input type="submit" value='🔍'></form>
